package maidsafe.passport;

message PacketContainer {
  repeated SignaturePacketContainer signature_packet = 1;
  repeated SelectableIdentityContainer selectable_packet = 2;
}

message SignaturePacketContainer {
  required bytes identity = 1;
  required bytes public_key = 2;
  required bytes private_key = 3;
  required bytes signature = 4;
  required uint32 type = 5;
}

message SelectableIdentityContainer {
  required bytes public_id = 1;
  required SignaturePacketContainer anmpid = 2;
  required SignaturePacketContainer mpid = 3;
  required SignaturePacketContainer mmid = 4;
}
